--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -9,6 +9,7 @@
     "jquery": "^3.5.1",
     "merge": "1.2.1",
     "oidc-client": "^1.9.0",
+    "phaser": "^3.55.2",
     "popper.js": "^1.16.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
