--- a/ClientApp/tsconfig.json
+++ b/ClientApp/tsconfig.json
@@ -14,7 +14,8 @@
     "jsx": "preserve",
     "lib": [
       "es2015",
-      "dom"
+      "dom",
+      "scripthost"
     ],
     "skipLibCheck": false
   },
