--- a/Counterpoint.csproj
+++ b/Counterpoint.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ClientApp\public\images\" />
     <Folder Include="Data\" />
   </ItemGroup>
 
