--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/dat.gui": "^0.7.7",
     "bootstrap": "^4.3.1",
     "connected-react-router": "6.5.2",
     "dat.gui": "^0.7.7",
@@ -27,12 +26,12 @@
     "svgo": "1.3.0"
   },
   "devDependencies": {
+    "@types/dat.gui": "^0.7.7",
     "@types/history": "4.7.3",
-    "@types/jest": "24.0.19",
-    "@types/node": "12.11.6",
+    "@types/jest": "^24.0.19",
     "@types/react": "16.9.9",
     "@types/react-dom": "16.9.2",
-    "@types/react-redux": "7.1.5",
+    "@types/react-redux": "^7.1.18",
     "@types/react-router": "5.1.2",
     "@types/react-router-dom": "5.1.0",
     "@types/reactstrap": "8.0.6",
@@ -46,7 +45,7 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.16.0",
     "nan": "^2.14.1",
-    "typescript": "^3.7.5"
+    "typescript": "4.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
