--- a/ClientApp/tsconfig.json
+++ b/ClientApp/tsconfig.json
@@ -19,6 +19,10 @@
     ],
     "skipLibCheck": true
   },
-  "include": ["src"],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ],
+  "include": [
+    "src"
+  ]
 }
