--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -9,7 +9,7 @@
     "history": "4.10.1",
     "jquery": "^3.5.1",
     "merge": "1.2.1",
-    "oidc-client": "^1.9.0",
+    "oidc-client": "^1.11.5",
     "phaser": "^3.55.2",
     "popper.js": "^1.16.0",
     "react": "16.11.0",
@@ -22,21 +22,21 @@
     "reactstrap": "8.1.1",
     "redux": "4.0.4",
     "redux-thunk": "2.3.0",
-    "rimraf": "^2.6.2",
+    "rimraf": "^3.0.2",
     "svgo": "1.3.0"
   },
   "devDependencies": {
     "@types/dat.gui": "^0.7.7",
     "@types/history": "4.7.3",
     "@types/jest": "^24.9.1",
+    "@types/node": "12.11.6",
     "@types/react": "16.9.9",
     "@types/react-dom": "16.9.2",
-    "@types/react-redux": "^7.1.18",
+    "@types/react-redux": "^7.1.5",
     "@types/react-router": "5.1.2",
     "@types/react-router-dom": "5.1.0",
     "@types/reactstrap": "8.0.6",
     "@typescript-eslint/parser": "^2.5.0",
-    "ajv": "^6.9.1",
     "cross-env": "6.0.3",
     "eslint": "^6.5.1",
     "eslint-config-react-app": "^5.2.0",
