--- a/ClientApp/tsconfig.json
+++ b/ClientApp/tsconfig.json
@@ -13,20 +13,13 @@
     "noEmit": true,
     "jsx": "preserve",
     "lib": [
-      "es2015",
+      "es6",
       "dom",
+      "es2017",
       "scripthost"
     ],
-    "skipLibCheck": true,
-    "types": [
-      "jest" 
-    ]
+    "skipLibCheck": false
   },
-  "exclude": [
-    "node_modules",
-    "**/*.test.ts",
-    "**/*.test.js"
-  ],
   "include": [
     "src"
   ]
