--- a/ClientApp/tsconfig.json
+++ b/ClientApp/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es2016",
     "allowJs": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
@@ -13,10 +13,8 @@
     "noEmit": true,
     "jsx": "preserve",
     "lib": [
-      "es6",
-      "dom",
-      "es2017",
-      "scripthost"
+      "es2016",
+      "dom"
     ],
     "skipLibCheck": false
   },
