--- a/Counterpoint.csproj
+++ b/Counterpoint.csproj
@@ -29,6 +29,10 @@
     <Content Include="jira-schmira.txt" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ClientApp\dist\assets\" />
+  </ItemGroup>
+
     <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
